Improve WebSocketClient thread safety and Chrome initialization
- Enhanced WebSocketClient with ConcurrentHashMap for thread-safe message handling
- Added proper initialization error detection in ConsoleListener with success flag
- Fixed Chrome user data directory to use absolute paths for better Windows compatibility
- Optimized message lookup performance from O(n) to O(1)
- Added memory leak prevention with automatic cleanup on errors and connection close
- Updated API documentation with recent improvements overview
- Modernized code style with primitive boolean types and static inner classes
- Replaced deprecated WaitTask usage with LambdaWaitTask throughout codebase